k3s/apps/manifests/authentik/publication.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-envoy-proxy
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: authentik-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: authentik
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 10080
