k3s/apps/manifests/authentik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: authentik-gateway
  namespace: authentik
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: auth.cryptic-coders.net
      allowedRoutes:
        namespaces:
          from: Same
